# PROJECTR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.fits
src/: CMakeLists.txt
src/core/: Batch.hpp  CMakeLists.txt  Config.hpp  Launcher.hpp  Propagator.hpp  Scatterer.hpp  Simulation.cpp  Simulation.hpp  main.cpp
src/core/batch/: Batch.hpp  BatchField.hpp  Bitmask.hpp
src/core/grid/: CartesianGrid.cpp  CartesianGrid.hpp  Grid.cpp  Grid.hpp  RadiationField.hpp
src/core/launcher/: IsotropicLauncher.cpp  IsotropicLauncher.hpp  LaserLauncher.cpp  LaserLauncher.hpp  Launcher.cpp  Launcher.hpp  PointLauncher.cpp  PointLauncher.hpp  SED.cpp  SED.hpp  SEDLauncher.cpp  SEDLauncher.hpp  TestLauncher.cpp  TestLauncher.hpp
src/core/propagator/: CartesianGrid.cpp  CartesianGrid.hpp  Propagator.hpp  RadiationField.hpp  TestPropagator.cpp  TestPropagator.hpp
src/core/scatterer/: IsotropicScatterer.cpp  IsotropicScatterer.hpp  NoScatterer.hpp  Scatterer.cpp  Scatterer.hpp  TestScatterer.cpp  TestScatterer.hpp
src/main/: CMakeLists.txt  main.cpp
src/util/: CMakeLists.txt  Config.hpp  FitsImage.cpp  FitsImage.hpp  Log.hpp  Math.hpp  Random.hpp  TextInput.hpp  (+3 more)
test/: CMakeLists.txt  main.cpp  test.cpp
test/core/: main.cpp  test.hpp
test/grid/: TestGrid.cpp  grid.cpp
test/launcher/: TestLauncher.cpp
test/random/: TestRandom.cpp
test/skirt/: TestSKIRT.cpp
test/skirt/data/: rad.ski
test/skirt/data/in/: sed.txt
test/skirt/data/multi/: rad.ski
test/skirt/data/multi/in/: sed.txt
test/skirt/data/scatter/: rad.ski
test/skirt/data/single/: rad.ski
(+4 files in other folders)
